; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/gadget/extr_file_storage.c_alloc_request.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/gadget/extr_file_storage.c_alloc_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fsg_dev = type { i32 }
%struct.usb_ep = type { i32 }
%struct.usb_request = type { i32 }

@GFP_ATOMIC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"can't allocate request for %s\0A\00", align 1
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fsg_dev*, %struct.usb_ep*, %struct.usb_request**)* @alloc_request to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @alloc_request(%struct.fsg_dev* %0, %struct.usb_ep* %1, %struct.usb_request** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.fsg_dev*, align 8
  %6 = alloca %struct.usb_ep*, align 8
  %7 = alloca %struct.usb_request**, align 8
  store %struct.fsg_dev* %0, %struct.fsg_dev** %5, align 8
  store %struct.usb_ep* %1, %struct.usb_ep** %6, align 8
  store %struct.usb_request** %2, %struct.usb_request*** %7, align 8
  %8 = load %struct.usb_ep*, %struct.usb_ep** %6, align 8
  %9 = load i32, i32* @GFP_ATOMIC, align 4
  %10 = call %struct.usb_request* @usb_ep_alloc_request(%struct.usb_ep* %8, i32 %9)
  %11 = load %struct.usb_request**, %struct.usb_request*** %7, align 8
  store %struct.usb_request* %10, %struct.usb_request** %11, align 8
  %12 = load %struct.usb_request**, %struct.usb_request*** %7, align 8
  %13 = load %struct.usb_request*, %struct.usb_request** %12, align 8
  %14 = icmp ne %struct.usb_request* %13, null
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %24

16:                                               ; preds = %3
  %17 = load %struct.fsg_dev*, %struct.fsg_dev** %5, align 8
  %18 = load %struct.usb_ep*, %struct.usb_ep** %6, align 8
  %19 = getelementptr inbounds %struct.usb_ep, %struct.usb_ep* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @ERROR(%struct.fsg_dev* %17, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %20)
  %22 = load i32, i32* @ENOMEM, align 4
  %23 = sub nsw i32 0, %22
  store i32 %23, i32* %4, align 4
  br label %24

24:                                               ; preds = %16, %15
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local %struct.usb_request* @usb_ep_alloc_request(%struct.usb_ep*, i32) #1

declare dso_local i32 @ERROR(%struct.fsg_dev*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
